fixed navlink color too hard to see

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -12,7 +12,7 @@ nav a {
   width: 120px; /* Adjust the width as needed */
   text-align: center; /* Center the link text */
   text-decoration: none;
-  color: #333; /* Text color */
+  color: #909090; /* Text color */
   transition: background-color 0.3s ease; /* Smooth transition */
   font-size: 1.5rem;
   padding: 2px;
